--- a/resources/index.html
+++ b/resources/index.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style/main.css">
+    <style>
+        .demo-box{
+            width: 33%;
+            float: left;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello</h1>
-
-
+<div class="a-equal-parent">
+    <div class="demo-box a-equal-h">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Aperiam architecto aut deleniti dicta dolor est eum
+        exercitationem iste laborum nam necessitatibus neque
+        nihil non nulla odit, tenetur totam veritatis voluptas.
+    </div>
+    <div class="demo-box a-equal-h">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Blanditiis.
+    </div>
+    <div class="demo-box a-equal-h">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Aliquid consectetur consequatur distinctio,
+        ducimus eaque error.
+    </div>
+</div>
     <script src="js/main.js"></script>
 </body>
 </html>
