--- a/resources/index.html
+++ b/resources/index.html
@@ -13,23 +13,11 @@
     </style>
 </head>
 <body>
-<div class="a-equal-parent">
-    <div class="demo-box a-equal-h">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Aperiam architecto aut deleniti dicta dolor est eum
-        exercitationem iste laborum nam necessitatibus neque
-        nihil non nulla odit, tenetur totam veritatis voluptas.
+    <div class="a-container">
+
     </div>
-    <div class="demo-box a-equal-h">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Blanditiis.
-    </div>
-    <div class="demo-box a-equal-h">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Aliquid consectetur consequatur distinctio,
-        ducimus eaque error.
-    </div>
-</div>
+
+
     <script src="js/main.js"></script>
 </body>
 </html>
