--- a/resources/index.html
+++ b/resources/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style/main.css">
-    <style>
-        .demo-box{
-            width: 33%;
-            float: left;
-            border: 1px solid black;
-        }
-    </style>
 </head>
 <body>
-    <div class="a-container">
+    <div class="a-container-fluid">
+        <div class="a-row">
 
+        </div>
     </div>
 
 
