--- a/resources/index.html
+++ b/resources/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="style/main.css">
     <style>
-        .demo-box{
+        .demo-box {
             width: 33%;
             float: left;
             border: 1px solid black;
@@ -13,23 +13,29 @@
     </style>
 </head>
 <body>
-<div class="a-equal-parent">
-    <div class="demo-box a-equal-h">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Aperiam architecto aut deleniti dicta dolor est eum
-        exercitationem iste laborum nam necessitatibus neque
-        nihil non nulla odit, tenetur totam veritatis voluptas.
+<div class="a-equal-parent" data-minWidth="800">
+    <div class="demo-box a-equal-h a-va-box">
+        <div class="a-va -mid">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Aperiam architecto aut deleniti dicta dolor est eum
+            exercitationem iste laborum nam necessitatibus neque
+            nihil non nulla odit, tenetur totam veritatis voluptas.
+        </div>
     </div>
-    <div class="demo-box a-equal-h">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Blanditiis.
+    <div class="demo-box a-equal-h a-va-box">
+        <div class="a-va -mid">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Blanditiis.
+        </div>
     </div>
-    <div class="demo-box a-equal-h">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Aliquid consectetur consequatur distinctio,
-        ducimus eaque error.
+    <div class="demo-box a-equal-h a-va-box">
+        <div class="a-va -mid">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Aliquid consectetur consequatur distinctio,
+            ducimus eaque error.
+        </div>
     </div>
 </div>
-    <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
