--- a/resources/index.html
+++ b/resources/index.html
@@ -8,6 +8,14 @@
 <body>
     <div class="a-container-fluid">
         <div class="a-row">
+            <div class="a-col-mob-12 a-col-tab-6">
+                mob col
+            </div>
+            <div class="a-col-mob-12 a-col-tab-6">
+                mob col
+            </div>
+        </div>
+        <div class="a-row">
 
         </div>
     </div>
