--- a/resources/index.html
+++ b/resources/index.html
@@ -8,11 +8,14 @@
 <body>
     <div class="a-container-fluid">
         <div class="a-row">
-            <div class="a-col-mob-12 a-col-tab-6">
-                mob col
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
+                COLUMN
             </div>
-            <div class="a-col-mob-12 a-col-tab-6">
-                mob col
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
+                COLUMN
+            </div>
+            <div class="a-col-mob-12 a-col-tab-12 a-col-des-3 a-col-ldes-4">
+                COLUMN
             </div>
         </div>
         <div class="a-row">
