--- a/resources/index.html
+++ b/resources/index.html
@@ -4,22 +4,51 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style/main.css">
+    <style>
+        .bordered {
+            border: 1px solid black;
+        }
+        .full-width {
+            width: 90%;
+            height: 100px;
+
+        }
+    </style>
 </head>
 <body>
     <div class="a-container-fluid">
         <div class="a-row">
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
-                COLUMN
+                <div class="">
+                    COLUMN
+                </div>
             </div>
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
-                COLUMN
+                <div class="">
+                    COLUMN
+                </div>
             </div>
             <div class="a-col-mob-12 a-col-tab-12 a-col-des-3 a-col-ldes-4">
-                COLUMN
+                <div class="">
+                    COLUMN
+                </div>
             </div>
         </div>
         <div class="a-row">
-
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
+                <div class="">
+                    COLUMN
+                </div>
+            </div>
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
+                <div class="">
+                    COLUMN
+                </div></div>
+            <div class="a-col-mob-12 a-col-tab-12 a-col-des-3 a-col-ldes-4">
+                <div class="">
+                    COLUMN
+                </div>
+            </div>
         </div>
     </div>
 
