--- a/resources/index.html
+++ b/resources/index.html
@@ -9,44 +9,56 @@
             border: 1px solid black;
         }
         .full-width {
-            width: 90%;
+            width: 100%;
             height: 100px;
-
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
     <div class="a-container-fluid">
         <div class="a-row">
-            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
-                <div class="">
-                    COLUMN
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
+                <div class="bordered full-width">
+                    <div class="a-abs-center">
+                        COLUMN
+                    </div>
                 </div>
             </div>
-            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
-                <div class="">
-                    COLUMN
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
+                <div class="bordered full-width">
+                    <div class="a-abs-center">
+                        COLUMN
+                    </div>
                 </div>
             </div>
-            <div class="a-col-mob-12 a-col-tab-12 a-col-des-3 a-col-ldes-4">
-                <div class="">
-                    COLUMN
+            <div class="a-col-mob-12 a-col-tab-12 a-col-des-4 a-col-ldes-4">
+                <div class="bordered full-width">
+                    <div class="a-abs-center">
+                        COLUMN
+                    </div>
                 </div>
             </div>
         </div>
         <div class="a-row">
-            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
-                <div class="">
-                    COLUMN
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
+                <div class="bordered full-width">
+                    <div class="a-abs-center">
+                        COLUMN
+                    </div>
                 </div>
             </div>
-            <div class="a-col-mob-12 a-col-tab-6 a-col-des-3 a-col-ldes-4">
-                <div class="">
-                    COLUMN
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
+                <div class="bordered full-width">
+                    <div class="a-abs-center">
+                        COLUMN
+                    </div>
                 </div></div>
-            <div class="a-col-mob-12 a-col-tab-12 a-col-des-3 a-col-ldes-4">
-                <div class="">
-                    COLUMN
+            <div class="a-col-mob-12 a-col-tab-12 a-col-des-4 a-col-ldes-4">
+                <div class="bordered full-width a-abs-center-parent">
+                    <div class="a-abs-center">
+                        COLUMN
+                    </div>
                 </div>
             </div>
         </div>
