--- a/resources/index.html
+++ b/resources/index.html
@@ -10,7 +10,6 @@
         }
         .full-width {
             width: 100%;
-            height: 100px;
             margin: 0 auto;
         }
     </style>
@@ -19,21 +18,21 @@
     <div class="a-container-fluid">
         <div class="a-row">
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width">
+                <div class="bordered full-width a-abs-center-parent">
                     <div class="a-abs-center">
                         COLUMN
                     </div>
                 </div>
             </div>
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width">
-                    <div class="a-abs-center">
-                        COLUMN
+                <div class="bordered full-width a-abs-center-parent">
+                    <div class="a-abs-center" style="padding: 5px; border: 1px solid red; margin: 5px">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo itaque nemo obcaecati quaerat tempore? Alias, beatae cum dolorem eius harum illum, libero maiores maxime nihil nobis porro quae rerum sapiente.
                     </div>
                 </div>
             </div>
             <div class="a-col-mob-12 a-col-tab-12 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width">
+                <div class="bordered full-width a-abs-center-parent">
                     <div class="a-abs-center">
                         COLUMN
                     </div>
@@ -42,14 +41,14 @@
         </div>
         <div class="a-row">
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width">
+                <div class="bordered full-width a-abs-center-parent">
                     <div class="a-abs-center">
                         COLUMN
                     </div>
                 </div>
             </div>
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width">
+                <div class="bordered full-width a-abs-center-parent">
                     <div class="a-abs-center">
                         COLUMN
                     </div>
