--- a/resources/index.html
+++ b/resources/index.html
@@ -8,6 +8,7 @@
         .demo-box {
             width: 33%;
             /*float: left;*/
+        }
         .bordered {
             border: 1px solid black;
         }
@@ -26,6 +27,7 @@
         }
         .full-width {
             width: 100%;
+            /*height: 100px;*/
             margin: 0 auto;
         }
     </style>
@@ -38,23 +40,23 @@
 </header>
 <div class="padding-setter" data-top=".f-header" data-bottom=".f-footer">
     <div class="a-container-fluid">
-        <div class="a-row">
-            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width a-abs-center-parent">
+        <div class="a-row a-equal-parent">
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4 a-equal-h bordered">
+                <div class=" full-width a-abs-center-parent">
                     <div class="a-abs-center">
                         COLUMN
                     </div>
                 </div>
             </div>
-            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width a-abs-center-parent">
+            <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4 a-equal-h a-va-box bordered">
+                <div class=" full-width a-abs-center-parent a-va -middle">
                     <div class="a-abs-center" style="padding: 5px; border: 1px solid red; margin: 5px">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo itaque nemo obcaecati quaerat tempore? Alias, beatae cum dolorem eius harum illum, libero maiores maxime nihil nobis porro quae rerum sapiente.
                     </div>
                 </div>
             </div>
-            <div class="a-col-mob-12 a-col-tab-12 a-col-des-4 a-col-ldes-4">
-                <div class="bordered full-width a-abs-center-parent">
+            <div class="a-col-mob-12 a-col-tab-12 a-col-des-4 a-col-ldes-4 a-equal-h bordered a-va-box">
+                <div class=" full-width a-abs-center-parent a-va -middle">
                     <div class="a-abs-center">
                         COLUMN
                     </div>
@@ -72,7 +74,10 @@
             <div class="a-col-mob-12 a-col-tab-6 a-col-des-4 a-col-ldes-4">
                 <div class="bordered full-width a-abs-center-parent">
                     <div class="a-abs-center">
-                        COLUMN
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Aperiam architecto aut deleniti dicta dolor est eum
+                        exercitationem iste laborum nam necessitatibus neque
+                        nihil non nulla odit, tenetur totam veritatis voluptas.
                     </div>
                 </div></div>
             <div class="a-col-mob-12 a-col-tab-12 a-col-des-4 a-col-ldes-4">
